# shared-memory-queue

./: README.md  benchmark.py  code_profiling.py  example.py  setup.cfg
src/shared_memory_deque/: __init__.py  deque.py
src/shared_memory_deque.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_deque.py
