[metadata]
name = shared-memory-deque
version = 0.1
description = a deque like implementation using multiprocessing.shared_memory
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
keywords = multiprocessing, queue, shared-memory
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
author = Simon Bauer
author_email = code@seimenadventure.de
url = https://github.com/cloasdata/shared-memory-deque

[options]
zip_safe = False
include_package_data = True
package_dir = 
	= src
packages = find:
install_requires =
	importlib; python_version >= "3.10"

[options.packages.find]
where = src

[options.extras_require]
test = 
	pytest >= 7.0.0